# Bankruptcy_Project

./: .gitignore  0_eda_1bln_v4_none.ipynb  0_eda_1bln_v4_v2m.ipynb  0_eda_all_v4_none.ipynb  README.md  pyproject.toml  requirements.txt
